[package]
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"
name = "gotham"
version = "0.1.0"
license = "MIT"
description = "A helper rust library for the gotham microservices framework"
homepage = "github.com/bytesonus/gotham-rust"
repository = "github.com/bytesonus/gotham-rust"

[dependencies]
async-std = "1.4.0"
serde_json = "*"
async-trait = "0.1.24"
futures = "0.3.4"
futures-util = "0.3.4"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'  # Optimize for size.
codegen-units = 1
