[package]
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"
name = "juno"
version = "0.1.2"
license = "MIT"
description = "A helper rust library for the juno microservices framework"
homepage = "https://github.com/bytesonus/juno-rust"
repository = "https://github.com/bytesonus/juno-rust"
readme = "README.md"

[dependencies]
async-std = "1"
serde_json = "1"
async-trait = "0.1.24"
futures = "0.3.4"
futures-util = "0.3.4"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'  # Optimize for size.
codegen-units = 1
